# key-docs

./: .gitignore  .gitlab-ci.yml  AGENT.md  DOC_REWORK_CHANGELOG.md  Jenkinsfile  Makefile  README.md  mkdocs.yml  pyproject.toml  refs.bib  requirements.txt  springer-basic-author-date.csl
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: mkdocs.yml
cinder/js/: javajml.js
disabled/: UsingKeyBook_auto.md
docs/: README.proveRules  UsingKeyBook.md  changelog.md  extra.css  grammar.md  howtodoc.md  index.md
docs/Development/: Architecture.md  CodeingConventions.md  ExternalProject.md  GUIExtensions.md  Gradle.md  How2ExtRecoder.md  HowtoTaclet.md
docs/Proof Scripts/: commands.md  index.md  linearScripts.md
docs/Testing/: ProveRules.md  deterministicTestOrder.md  index.md
docs/Using KeY/: ADTs.md  Classpath.md  Exploration.md  HowToTaclet.md  JMLGrammar.md  KeyGrammar.md  NodeDiff.md  Polarity.md  RemoveGenerics.md  index.md
docs/devel/: AddingSMTSolvers.md  Architecture.md  CodingConventions.md  CounterExampleGeneration.md  ExtendingKeY.md  GUIExtensions.md  Gradle.md  How2ExtRecoder.md  HowToTaclet.md  HowtoTaclet.md  Listeners.md  Logging.md  Multithreading.md  NewKeyParser.md  PerformanceOptimizations.md  ProofCaching.md  ProofLoadSave.md  RuleApplicationPipeline.md  SMTTranslation.md  ScriptCommands.md  SpotlessAutomaticFormatting.md  StrategyCostTables.md  StrategyCosts.md  TacletMatching.md  TermLabels.md  ThreadSafety.md  howtodoc.md  index.md  (+1 more)
hooks/: approval.py  author.py
includes/: costband-table.md
(+125 files in other folders)
