[project]
name = "key-docs"
description = "Documentation for the KeY prover system"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
    "pygments",
    "markdown-blockdiag",
    "mkdocs-bibtex",
    "markdown-aafigure==v202104.1011",
    "mkdocs-build-plantuml-plugin",
    "Pillow",
    "Markdown"
]

[tool.setuptools]
py-modules = []